syntax = "proto3";

import "google/api/annotations.proto";
import "order/order.proto";

package demo;

message GetDemoOrderRequest {
    int64 id = 1;
}

service DemoService {
    rpc GetDemoOrder (GetDemoOrderRequest) returns (order.Order) {}
}

// gPRC-getway Test
service DemoApiService {
    rpc GetDemoOrderApi (GetDemoOrderRequest) returns (order.Order) {
        option (google.api.http) = {
            post: "/v1/getDemoOrder"
            body: "*"
        };
    }
}